--- a/vignettes/graficos.Rmd
+++ b/vignettes/graficos.Rmd
@@ -8,7 +8,9 @@ vignette: >
 ---
 
 ```{r setup, include = FALSE}
-knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
+knitr::opts_chunk$set(echo = FALSE, message = FALSE, 
+                      warning = FALSE, results = FALSE, 
+                      comment = FALSE)
 ```
 
 ## Carregando pacotes necessários
@@ -17,67 +19,111 @@ knitr::opts_chunk$set(echo = TRUE, message = FALSE, warning = FALSE)
 library(ggplot2)
 library(dplyr)
 library(rgdal)
+library(sf)
+library(tmap)
 ```
 
 
 ## Contabilizando os casos por dia
 
-```{r dados}
-dados <- read.csv("output/corona_brasil.csv")
+```{r dados, echo = TRUE}
+dados <- read.csv("output/corona_brasil01.csv")
 dados$date <- as.Date(dados$date)
-df <- dados %>% 
+df <- dados %>% filter(date > '2020-02-25') %>%
   select(-uid) %>%
   group_by(date, id_date) %>%
   summarise_all(sum)
 ```
 
-```{r fig-casos, echo = FALSE, fig.width = 6, fig.height = 3}
-df1 <- df %>% filter(date > '2020-02-25') 
-ggplot(df1, aes(x = date, y = cases)) + 
+```{r fig-casos, fig.width = 9, fig.height = 4.5}
+ggplot(df, aes(x = date, y = cases)) + 
   geom_line() +
   geom_point() +
   labs(x = "Data", 
        y = "Número de casos confirmados", 
        title = "Número de casos confirmados de corona vírus no Brasil") +
-  theme_minimal()
+  scale_x_date(date_breaks = "1 day") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 90))
 ```
 
 ## Entendendo o aumento diário
 
-```{r fig-perc, echo = FALSE, fig.width = 7.5, fig.height = 5}
-df1$delta_cases <- df1$cases - lag(df1$cases)
-df1$diff_perc <- round(df1$delta_cases/df1$cases, 3) * 100
-df1$label <- paste(df1$diff_perc, "%")
-ggplot(df1, aes(x = date, y = delta_cases)) + 
+```{r fig-perc, fig.width = 9, fig.height = 9}
+df$delta_cases <- df$cases - lag(df$cases)
+df$diff_perc <- round(df$delta_cases/df$cases, 3) * 100
+df$label <- paste(df$delta_cases, "%")
+ggplot(df, aes(x = date, y = delta_cases)) + 
   geom_bar(stat = "identity", alpha = .7) +
-  coord_flip() +
+  #coord_flip() 
   scale_x_date(date_breaks = "1 day") +
-  scale_y_continuous(expand = c(0, 5)) +
+  scale_y_continuous(limits = c(0, max(df$delta_cases, na.rm = TRUE) + 3), 
+                     expand = c(0, 0)) +
   geom_text(aes(label = label), 
             size = 2.5, 
-            hjust = 0) + 
+            vjust = -0.5) + 
   labs(x = "Data", 
        y = "% de aumento", 
        title = "Porcentagem de aumento nos casos confirmados") +
-  theme_minimal()
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 90))
 ```
 
 ## Número de casos por estado brasileiro
 
-```{r mapa, echo = FALSE}
+```{r mapa, message = FALSE, fig.width = 6, fig.height = 6}
 df_uf <- dados %>% filter(date == max(date)) %>%
-  group_by(uid) %>%
-  summarise_at(vars(cases), sum)
+  group_by(uid, date) %>%
+  summarise_at(vars(cases), sum) %>%
+  dplyr::rename(COD_UF = uid) #%>%
+  #dplyr::mutate(cases = log(cases + 1))
 
-br <- readOGR("../data/Estados_do_Brasil/Brasil.shp", 
-              encoding = "UTF-8")
+br <- readOGR("../data/Estados_do_Brasil/Brasil.shp")
 
-mapa <- ggplot() +
-  geom_polygon(data = br, aes(x = long, y = lat, group = group), 
-               fill = "grey", alpha = 0.7, color = "white") +
-  #geom_point(aes(x = long, y = lat, size = cases, color = cases), apha = 0.9) +
-  theme_void()
-mapa
+br_sf <- st_as_sf(br)
+
+tm_shape(br) +
+  tm_borders() +
+  tm_polygons() +
+  br_sf %>%  merge(df_uf) %>%
+  tm_shape() +
+  tm_symbols(size = "cases", col = "black") #+
+  #tm_facets(by = "date", free.coords = FALSE)
 ```
 
+## Evolução do número de casos por estado
+
+```{r facet-map, fig.width = 9, fig.height = 9}
+df_date <- dados %>% filter(date > '2020-02-25') %>%
+  group_by(uid, date) %>%
+  summarise_at(vars(cases), sum) %>%
+  dplyr::rename(COD_UF = uid) #%>%
+  #dplyr::mutate(cases = log(cases + 1))
+
+all_map <- tm_shape(br) +
+  tm_borders() +
+  tm_polygons() +
+  br_sf %>%  merge(df_date) %>%
+  tm_shape() +
+  tm_symbols(size = "cases", col = "black") +
+  tm_facets(by = "date", free.coords = FALSE)
+
+all_map
+```
+
+## Animação
+
+```{r anim, eval = FALSE}
+anim <- tm_shape(br) +
+  tm_borders() +
+  tm_polygons() +
+  br_sf %>%  merge(df_date) %>%
+  tm_shape() +
+  tm_dots(size = "cases") +
+  tm_facets(along = "date", free.coords = FALSE) 
+  
+tmap_animation(anim, filename = "anim.gif", delay = 25, 
+               width = 2400, height = 2400, res = 300)
+
+```
 
