--- a/vignettes/graficos.Rmd
+++ b/vignettes/graficos.Rmd
@@ -72,23 +72,25 @@ ggplot(df, aes(x = date, y = delta_cases)) +
 ## Número de casos por estado brasileiro
 
 ```{r mapa, message = FALSE, fig.width = 6, fig.height = 6}
-df_uf <- dados %>% filter(date == max(date)) %>%
+df_uf <- dados %>% 
+  filter(date %in% c(min(date), max(date))) %>%
   group_by(uid, date) %>%
   summarise_at(vars(cases), sum) %>%
-  dplyr::rename(COD_UF = uid) #%>%
-  #dplyr::mutate(cases = log(cases + 1))
+  dplyr::rename(COD_UF = uid) %>%
+  dplyr::mutate(log_cases = log(cases + 1))
 
 br <- readOGR("../data/Estados_do_Brasil/Brasil.shp")
 
 br_sf <- st_as_sf(br)
 
-tm_shape(br) +
-  tm_borders() +
-  tm_polygons() +
-  br_sf %>%  merge(df_uf) %>%
+br_sf %>%  merge(df_uf) %>%
   tm_shape() +
-  tm_symbols(size = "cases", col = "black") #+
-  #tm_facets(by = "date", free.coords = FALSE)
+  tm_borders() +
+  #tm_polygons() +
+  #tm_shape() +
+  tm_symbols(size = "cases", col = "black") +
+  tm_facets(by = "date", free.coords = FALSE) +
+  NULL
 ```
 
 ## Evolução do número de casos por estado
