--- a/vignettes/graficos.Rmd
+++ b/vignettes/graficos.Rmd
@@ -10,10 +10,11 @@ vignette: >
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(echo = FALSE, message = FALSE, 
                       warning = FALSE, results = FALSE, 
-                      comment = FALSE)
+                      comment = FALSE, 
+                      fig.width = 5, 
+                      fig.height = 5)
 ```
 
-## Carregando pacotes necessários
 
 ```{r pkgs}
 library(ggplot2)
@@ -25,42 +26,52 @@ library(brazilmaps)
 ```
 
 
-## Contabilizando os casos por dia
+## Crescimento nacional no número de casos
 
-```{r dados, echo = TRUE}
+```{r dados}
+# carregando dados
 dados <- read.csv("output/corona_brasil01.csv")
+br <- get_brmap(geo = "State",
+                class = "sf")
+estados <- data.frame(uid = br$State, 
+                      nome = br$nome)
+
 # fazendo todas as modificacoes aqui
 dados <- dados %>% 
+  dplyr::rename(Casos = cases) %>%
   mutate(date = as.Date(date), 
          uid = as.factor(uid)) %>%
-  filter(date > '2020-02-25')
+  filter(date > '2020-02-25') %>% # para pegar a partir do primeiro caso
+  merge(., estados, by = "uid")
 df <- dados %>% 
-  select(-uid) %>%
+  select(-uid, -nome) %>%
   group_by(date, id_date) %>%
   summarise_all(sum)
 ```
 
-```{r fig-casos, fig.width = 9, fig.height = 4.5}
-ggplot(df, aes(x = date, y = cases)) + 
-  geom_line() +
-  geom_point() +
+```{r fig-casos, fig.width=6}
+ggplot(df, aes(x = date, y = Casos, color = "red")) + 
+  geom_line(alpha = .7) +
+  geom_point(size = 2) +
   labs(x = "Data", 
        y = "Número de casos confirmados", 
        title = "Número de casos confirmados de corona vírus no Brasil") +
   scale_x_date(date_breaks = "1 day", 
                date_labels = "%d/%m") +
   theme_minimal() +
-  theme(axis.text.x = element_text(angle = 90))
+  theme(axis.text.x = element_text(angle = 90), 
+        legend.position = "none")
 ```
+
 
 ## Entendendo o aumento diário
 
-```{r fig-perc, fig.width = 9, fig.height = 9}
-df$delta_cases <- df$cases - lag(df$cases)
-df$diff_perc <- round(df$delta_cases/df$cases, 3) * 100
+```{r fig-perc, fig.width=6}
+df$delta_cases <- df$Casos - lag(df$Casos)
+df$diff_perc <- round(df$delta_cases/df$Casos, 3) * 100
 df$label <- paste(df$delta_cases, "%")
 ggplot(df, aes(x = date, y = delta_cases)) + 
-  geom_bar(stat = "identity", alpha = .7) +
+  geom_bar(stat = "identity", alpha = .7, color = "red", fill = "red") +
   #coord_flip() 
   scale_x_date(date_breaks = "1 day", 
                date_labels = "%d/%m") +
@@ -78,15 +89,14 @@ ggplot(df, aes(x = date, y = delta_cases)) +
 
 ## Número de casos por estado brasileiro
 
-```{r mapa, message = FALSE, fig.width = 6, fig.height = 6}
-df_uf <- dados %>%
-  filter(date == max(date)) %>%
-  group_by(uid) %>%
-  summarise_at(vars(cases), sum) %>%
-  dplyr::rename(State = uid)
-
-br <- get_brmap(geo = "State",
-                class = "sf")
+```{r mapa, message = FALSE}
+df_uf <- dados %>% 
+  group_by(uid, nome, date) %>%
+  summarise_at(vars(Casos), sum) %>%
+  ungroup() %>% 
+  dplyr::rename(State = uid) %>%
+  dplyr::mutate(log_cases = log(Casos + 1), 
+                State = as.factor(State))
 
 br_sf <- st_as_sf(br) %>%  
   merge(df_uf)
@@ -94,22 +104,46 @@ br_sf <- st_as_sf(br) %>%
 tm_shape(br_sf) +
   tm_fill() +
   tm_borders() +
-  #tm_polygons() +
   #tm_shape() +
-  tm_symbols(size = "cases", 
+  tm_symbols(size = "Casos", 
              col = "red", 
+             border.col = "red",
              scale = 2, 
              alpha = 0.7)
 #tm_facets(by = "date", free.coords = FALSE)
 ```
 
+## Crescimento do número de casos nos estados mais afetados
+
+```{r estados, fig.width=6}
+uf10 <- df_uf %>% 
+  filter(date == max(date), Casos > 9) %>%
+  select(State)
+df_uf %>% filter(State %in% uf10$State) %>% 
+  ggplot(aes(x = date, y = Casos, col = nome)) + 
+  geom_line() +
+  geom_point() +
+  labs(x = "Data", 
+       y = "Número de casos confirmados", 
+       title = "Estados com mais de 10 casos", 
+       fill = "UF") +
+  guides(color = guide_legend("UF")) +
+  scale_color_brewer(palette = "Set2") +
+  scale_x_date(date_breaks = "1 day", 
+               date_labels = "%d/%m") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 90), 
+        legend.title = element_text(size = 7), 
+        legend.text = element_text(size = 7))
+```
+
+
 ## Evolução do número de casos por estado
 
-```{r facet-map, fig.width = 9, fig.height = 9}
+```{r facet-map}
 df_date <- dados %>% 
-  #filter(date %in% unique(dados$date)[c(1, 10, 20)]) %>%
   group_by(uid, date) %>%
-  summarise_at(vars(cases), sum) %>%
+  summarise_at(vars(Casos), sum) %>%
   dplyr::rename(State = uid) #%>%
   #dplyr::mutate(cases = log(cases + 1))
 
@@ -117,38 +151,39 @@ date_sf <- st_as_sf(br) %>%
   merge(df_date)
 
 all_map <- tm_shape(br) +
+  #tm_fill(col = "white") +
   tm_borders() +
   tm_polygons() +
   #br_sf %>%  merge(df_date) %>%
   tm_shape(date_sf) +
-  tm_symbols(size = "cases", 
+  tm_fill() +
+  tm_borders() +
+  tm_symbols(size = "Casos",
+             border.col = "red", 
              col = "red", 
              scale = 1, 
              alpha = 0.7) +
-  tm_add_legend(type = "text", 
-                title = "bla", 
-                labels = 'bla',
-                text = 'bla') +
   tm_facets(by = "date", free.coords = FALSE)
-
-#all_map
 ```
 
 
 ```{r anim, eval = F, fig.show = FALSE}
-# anim <- tm_shape(br) +
-#   tm_borders() +
-#   tm_polygons() +
-#   tm_shape(date_sf) +
-#   tm_symbols(size = "cases", 
-#              col = "red", 
-#              #scale = 2, 
-#              alpha = 0.7) +
-#   tm_facets(along = "date", free.coords = FALSE)
+anim <- tm_shape(br) +
+  tm_borders() +
+  tm_polygons() +
+  tm_shape(date_sf) +
+  tm_symbols(size = "Casos",
+             border.col = "red", 
+             col = "red",
+             scale = 2,
+             alpha = 0.7) +
+  tm_facets(along = "date", free.coords = FALSE)
 
-# tmap_animation(anim, filename = "anim.gif", delay = 25, 
-#                width = 2400, height = 2400, res = 300)
+tmap_animation(anim, filename = "figs/anim.gif", delay = 25, 
+                width = 1200, height = 1200, res = 300)
 
 ```
 
-![](anim.gif)
+<center>
+![](figs/anim.gif){width=70%}
+</center>
