--- a/vignettes/coronabr.Rmd
+++ b/vignettes/coronabr.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Para instalar o pacote
 
-`remotes::install_github(liibre/coronabr)`
+`remotes::install_github("liibre/coronabr")`
 
 ## Carregando o pacote
 
