--- a/vignettes/graficos.Rmd
+++ b/vignettes/graficos.Rmd
@@ -126,11 +126,32 @@ mapa
 uf10 <- df_uf %>% 
   filter(date == max(date), Casos > 9) %>%
   select(State)
+fig_uf <- df_uf %>% filter(State %in% uf10$State) %>% 
+  mutate(nome = reorder(nome, -Casos)) %>% 
+  ggplot(aes(x = date, y = Casos, col = nome)) + 
+  geom_line() +
+  geom_point() +
+  labs(x = "Data", 
+       y = "Número de casos confirmados", 
+       title = "Estados com mais de 10 casos", 
+       fill = "UF") +
+  guides(color = guide_legend("UF")) +
+  scale_color_brewer(palette = "Set2") +
+  scale_x_date(date_breaks = "1 day", 
+               date_labels = "%d/%m") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 90), 
+        legend.title = element_text(size = 7), 
+        legend.text = element_text(size = 7))
+fig_uf
+```
 
+
+```{r anim-estados, fig.width=6, fig.show="animate", eval=FALSE}
 # pra expandir o eixo x 
 hoje_mais_5_dias <- as.Date(format(Sys.time(), "%Y-%m-%d")) + 5
 
-fig_uf <- df_uf %>% filter(State %in% uf10$State) %>% 
+anim_uf <- df_uf %>% filter(State %in% uf10$State) %>% 
   mutate(nome = reorder(nome, -Casos)) %>% 
   ggplot(aes(x = date, y = Casos, col = nome, group = nome)) + 
   geom_line() +
@@ -157,7 +178,10 @@ fig_uf <- df_uf %>% filter(State %in% uf10$State) %>%
         legend.text = element_text(size = 7)) +
   expand_limits(x = as.Date(hoje_mais_5_dias))
 
-fig_uf
+# ainda nao sei salvar
+# animate(anim_uf, fps = 10, width = 750, height = 450)
+# anim_save("figs/anim_uf.gif")
+
 ```
 
 
