--- a/vignettes/coronabr.Rmd
+++ b/vignettes/coronabr.Rmd
@@ -18,8 +18,8 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Carregando o pacote
 
 ```{r load}
-#library(coronabr)
-devtools::load_all()
+library(coronabr)
+#devtools::load_all() #for testing
 ```
 
 ### Baixando os dados apenas do Brasil
