--- a/vignettes/graficos.Rmd
+++ b/vignettes/graficos.Rmd
@@ -130,15 +130,12 @@ mapa <- map_corona_br(df = dados_format,
 anim <- map_corona_br(df = dados_format, 
                       prop_pop = FALSE,
                       anim = TRUE)
-tmap::tmap_animation(anim, filename = "figs/anim_test.gif",
-                     delay = 25, width = 1200, height = 1200,
-                     restart.delay = 50)
 ```
 
 ```{r anim, eval = T, fig.show = "animate"}
 anim <- gif_corona_br(df = dados_format)
 
-tmap::tmap_animation(anim, filename = "figs/anim.gif", delay = 25, 
+tmap::tmap_animation(anim, filename = "figs/anim_old.gif", delay = 25, 
                 width = 1200, height = 1200,
                 restart.delay = 100)
 # 
