--- a/vignettes/graficos.Rmd
+++ b/vignettes/graficos.Rmd
@@ -17,8 +17,8 @@ knitr::opts_chunk$set(echo = FALSE, message = FALSE,
 
 
 ```{r pkgs}
-library(coronabr)
-# devtools::load_all() #for testing
+#library(coronabr)
+devtools::load_all() #for testing
 library(gganimate)
 ```
 
@@ -55,8 +55,8 @@ map_corona_br(df = dados_format)
 Um mapa com o valor bruto no número de casos
 
 ```{r mapa2, fig.height=3, fig.width=3}
-mapa <- map_corona_br(df = dados_format, 
-                      prop_pop = FALSE)
+map_corona_br(df = dados_format, 
+              prop_pop = FALSE)
 ```
 
 ## Crescimento do número de casos nos estados mais afetados
@@ -126,19 +126,11 @@ mapa <- map_corona_br(df = dados_format,
 
 ## Evolução do número de casos por estado
 
-```{r anim_test,fig.show = "animate"}
+```{r anim_test, fig.show = "animate"}
 anim <- map_corona_br(df = dados_format, 
                       prop_pop = FALSE,
-                      anim = TRUE)
-```
-
-```{r anim, eval = T, fig.show = "animate"}
-anim <- gif_corona_br(df = dados_format)
-
-tmap::tmap_animation(anim, filename = "figs/anim_old.gif", delay = 25, 
-                width = 1200, height = 1200,
-                restart.delay = 100)
-# 
+                      anim = TRUE, 
+                      dir = "figs")
 ```
 
 <img src="https://raw.githubusercontent.com/liibre/coronabr/master/vignettes/figs/anim.gif" align="center" alt="" width="600" />
