--- a/README.Rmd
+++ b/README.Rmd
@@ -22,6 +22,10 @@ Disponibilizamos aqui atualizações diárias dos gráficos. Sabemos que deve ha
 
 Fazemos ciência aberta, democrática e reprodutível. Este é um trabalho em desenvolvimento. Sugestões, entrem em contato conosco. Para entender como contribuir, clique [aqui](https://liibre.github.io/coronabr/contributing.html).
 
+## Aviso!
+
+Os dados são referentes aos casos notificados. É sabido que neste momento há um acúmulo de testes para COVID-19 sem resultados. Assim, mais do que nunca, os números que vemos são das **notificações** e não refletem a epidemia em si.
+
 ## Sobre os dados
 
 Antes de mais nada, declaramos nossa postura alinhada com as ideias de uma ciência de dados responsável, compromissada e feminista. Somos alinhadxs com o [manifest-no](https://www.manifestno.com/), refutamos regimes de dados prejudiciais e nos comprometemos a novos futuros de dados.
