--- a/README.Rmd
+++ b/README.Rmd
@@ -4,6 +4,8 @@ output: github_document
 
 [![Build Status](https://travis-ci.com/liibre/coronabr.svg?branch=master)](https://travis-ci.com/liibre/coronabr)
 
+
+<!--html_preserve-->
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-162786964-1"></script>
 <script>
@@ -13,6 +15,7 @@ output: github_document
 
   gtag('config', 'UA-162786964-1');
 </script>
+<!--/html_preserve-->
 
 # Download de dados de COVID-19 no Brasil
 
