--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ O código é aberto. Entre em [como usar](https://liibre.github.io/coronabr/arti
 
 Disponibilizamos aqui atualizações diárias dos gráficos. Sabemos que deve haver maneiras responsáveis de apresentar estes dados e que as comparações entre regiões e países dependem de muitas variáveis.
 
-Fazemos ciência aberta, democrática e reprodutível. Este é um trabalho em desenvolvimento. Sugestões, entrem em contato conosco. Para entender como contribuir, clique [aqui](https://liibre.github.io/coronabr/docs/CONTRIBUTING.html).
+Fazemos ciência aberta, democrática e reprodutível. Este é um trabalho em desenvolvimento. Para entender como contribuir, clique [aqui](https://liibre.github.io/coronabr/docs/CONTRIBUTING.html).
 
 ## Aviso!
 
@@ -39,9 +39,14 @@ Apesar de acreditarmos no acesso sem distinção a dados abertos, não recomenda
 
 No Brasil, a notificação de casos carrega consigo vieses espaciais, econômicos e de classe que não podem ser ignorados. Para uma modelos **responsáveis** de previsão do crescimento no número de casos veja o [Observatório COVID-19 Brasil](https://covid19br.github.io/index.html) (um grupo colaborativo de cientistas brasileirxs) e o [Mapa de previsão da propagação da COVID-19 por contágio comunitário no Brasil](https://covid-19-risk.github.io/map/brazil/pt/).
 
-- A partir de 14/03/20, a notificação de casos graves de COVID-19 foca apenas nos casos graves que são atendidos nos hospitais.
-- A partir de 18/03/2020, a página original do Min. da Saúde parou de funcionar e os boletins estão sendo divulgados em apresentações de powerpoint e PDFs. [Adriano Belisario](https://www.twitter.com/belisards) está fazendo a compilação manual destes dados [aqui](https://github.com/belisards/coronabr)
-<!--- A partir de 20/03/2020, a notificação exclui os casos suspeitos que vinham sendo divulgados.-->
+### Nota sobre os dados disponibilizados pelo Ministério da Saúde
+
++ A partir de 14/03/20, a notificação de casos graves de COVID-19 foca apenas nos casos graves que são atendidos nos hospitais.
++ Até 2020-03-18 o ministério de saúde brasileiro disponibilizou os dados de casos de coronavirus COVID-19 discriminados por estado na página http://plataforma.saude.gov.br/novocoronavirus/#COVID-19-brazil
++ Entre 2020-03-18 e 2020-03-25, a página original do Ministério da Saúde parou de funcionar e os dados de casos de coronavirus COVID-19 discriminados por estado foram divulgados em apresentações de powerpoint e PDFs no blog do Ministério. [Adriano Belisario](https://www.twitter.com/belisards) fez a compilação manual destes dados [neste repositório](https://github.com/belisards/coronabr)
++ A partir de 2020-03-26 o ministério de saúde brasileiro disponibilizou os dados de casos de coronavirus COVID-19 na página https://covid.saude.gov.br/
++ A partir de 28-03-2020 a opção de fazer download da série histórica por casos voltou a estar disponível. __Estamos implementando de novo a função que disponibiliza esses dados__
+
 
 ## Visualizando os dados 
 
@@ -95,4 +100,4 @@ Importante lembrar que desde 27/03/2020 tem muitos testes sem resultados e que o
 
 - Siga o **Atila Iamarino** no [youtube](https://www.youtube.com/channel/UCSTlOTcyUmzvhQi6F8lFi5w), [Instagram](www.instagram.com/oatila), [twitter](https://twitter.com/oatila) ou [telegram](https://t.me/corona_atila). Tem também um [fórum brasileiro de reddit](https://www.reddit.com/r/coronabr/) com muita informação.
 
-Dúvidas, contribuições e sugestões, poste uma *issue* [aqui](https://github.com/liibre/coronabr/issues) ou nos encontre no twitter ([Sara](https://twitter.com/mortarasara), [Andrea](https://twitter.com/SanchezTapiaA) ou [Karlo]()).
+Dúvidas, contribuições e sugestões, poste uma *issue* [aqui](https://github.com/liibre/coronabr/issues), escreva-nos um [email](mailto:liibrelab@gmail.com) ou nos encontre no twitter ([Sara](https://twitter.com/mortarasara), [Andrea](https://twitter.com/SanchezTapiaA) ou [Karlo](https://twitter.com/kguidonimartins)).
