--- a/vignettes/lac.Rmd
+++ b/vignettes/lac.Rmd
@@ -57,7 +57,7 @@ covid_lac$confirmed_per100k <- covid_lac$confirmed/covid_lac$pop_est * 1000000
 E agora sim, vamos visualizar os dados em um mapa dinâmico. 
 
 ```{r map, results = TRUE}
-tmap_mode("view")
+tmap_mode("plot")
 tm <- tm_shape(covid_lac) +
   tm_polygons("confirmed_per100k", 
               title = "Casos por 100 mil hab.", 
