--- a/vignettes/lac.Rmd
+++ b/vignettes/lac.Rmd
@@ -16,7 +16,8 @@ knitr::opts_chunk$set(echo = TRUE, message = FALSE,
 ```
 
 ```{r pkgs}
-library(coronabr)
+devtools::load_all()
+#library(coronabr)
 library(tmap)
 ```
 
@@ -58,19 +59,24 @@ E agora sim, vamos visualizar os dados em um mapa dinâmico.
 
 ```{r map, results = TRUE}
 tmap_mode("plot")
-tm <- tm_shape(covid_lac) +
+tm <- tm_shape(covid_lac, 
+               projection = 4326) +
   tm_polygons("confirmed_per100k", 
-              title = "Casos por 100 mil hab.", 
-              breaks = c(0, 10, 20, 30, 40, 50, 100, 200, 400), 
+              title = "Casos por 100 mil hab.",
+              breaks = c(0, 10, 20, 30, 40, 50, 100, 200, 400, 600), 
               labels = c("0 a 10",
-                         "10 a 20", 
+                         "10 a 20",
                          "20 a 30",
                          "30 a 40",
                          "40 a 50",
                          "50 a 100",
                          "100 a 200",
-                         "200 a 300")) +
+                         "200 a 400",
+                         "400 a 600")
+              ) +
   tmap_style("col_blind")
 tm
 ```
+
+
 
