--- a/vignettes/lac_es.Rmd
+++ b/vignettes/lac_es.Rmd
@@ -16,7 +16,8 @@ knitr::opts_chunk$set(echo = TRUE, message = FALSE,
 ```
 
 ```{r pkgs}
-library(coronabr)
+devtools::load_all()
+#library(coronabr)
 library(tmap)
 ```
 
@@ -56,12 +57,13 @@ covid_lac$confirmed_per100k <- covid_lac$confirmed/covid_lac$pop_est * 1000000
 
 Y ahora, visualicemos los datos en un mapa dinámico.
 
-```{r map, results = TRUE}
-tmap_mode("view")
-tm <- tm_shape(covid_lac) +
-  tm_polygons("confirmed_per100k",
+```{r map, results = TRUE, fig.width = 8}
+tmap_mode("plot")
+tm <- tm_shape(covid_lac,
+               projection=4326) +
+  tm_polygons("confirmed_per100k", 
               title = "Casos por 100 mil hab.",
-              breaks = c(0, 10, 20, 30, 40, 50, 100, 200, 400),
+              breaks = c(0, 10, 20, 30, 40, 50, 100, 200, 400, 600), 
               labels = c("0 a 10",
                          "10 a 20",
                          "20 a 30",
@@ -69,7 +71,9 @@ tm <- tm_shape(covid_lac) +
                          "40 a 50",
                          "50 a 100",
                          "100 a 200",
-                         "200 a 300")) +
+                         "200 a 400",
+                         "400 a 600")
+              ) +
   tmap_style("col_blind")
 tm
 ```
