--- a/vignettes/lac_es.Rmd
+++ b/vignettes/lac_es.Rmd
@@ -61,7 +61,7 @@ tmap_mode("view")
 tm <- tm_shape(covid_lac) +
   tm_polygons("confirmed_per100k",
               title = "Casos por 100 mil hab.",
-              breaks = c(0, 10, 20, 30, 40, 50, 100, 200, 400),
+              breaks = c(0, 10, 20, 30, 40, 50, 100, 200, 400, 600),
               labels = c("0 a 10",
                          "10 a 20",
                          "20 a 30",
@@ -69,7 +69,9 @@ tm <- tm_shape(covid_lac) +
                          "40 a 50",
                          "50 a 100",
                          "100 a 200",
-                         "200 a 300")) +
+                         "200 a 400",
+                         "400 a 600"
+                         )) +
   tmap_style("col_blind")
 tm
 ```
