--- a/vignettes/lac_es.Rmd
+++ b/vignettes/lac_es.Rmd
@@ -59,18 +59,17 @@ Y ahora, visualicemos los datos en un mapa dinámico.
 ```{r map, results = TRUE}
 tmap_mode("view")
 tm <- tm_shape(covid_lac) +
-  tm_polygons("confirmed_per100k",
-              title = "Casos por 100 mil hab.",
-              breaks = c(0, 10, 20, 30, 40, 50, 100, 200, 400, 600),
-              labels = c("0 a 10",
-                         "10 a 20",
-                         "20 a 30",
-                         "30 a 40",
-                         "40 a 50",
+  tm_polygons("confirmed_per100k", 
+              title = "Casos por 100 mil hab.", 
+              breaks = c(0, 50, 100, 150, 200, 400, 600, 1000, 1100), 
+              labels = c("0 a 50", 
                          "50 a 100",
-                         "100 a 200",
+                         "100 a 150",
+                         "150 a 200",
                          "200 a 400",
-                         "400 a 600"
+                         "400 a 600",
+                         "600 a 1000",
+                         ">1000"
                          )) +
   tmap_style("col_blind")
 tm
