--- a/vignettes/coronabr.Rmd
+++ b/vignettes/coronabr.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Download dos casos de COVID-19 no Brasil"
+title: "Download dos casos de COVID-19 no Brasil (e no mundo)"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{coronabr}
@@ -8,41 +8,91 @@ vignette: >
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, warning = FALSE)
+knitr::opts_chunk$set(echo=TRUE, warning=FALSE)
 ```
 
 ## Para instalar o pacote
 
-`remotes::install_github("liibre/coronabr")`
+```{r install, eval=FALSE}
+remotes::install_github("liibre/coronabr")
+```
 
-## Carregando o pacote
+## Para carregar o pacote
 
 ```{r load}
-library(coronabr)
+library("coronabr")
 ```
 
-### Baixando os dados apenas do Brasil
+## Dados do Brasil
 
-Aqui está o exemplo usando a função `get_corona_br()` que extrai os dados do portal https://brasil.io/, usando a API contendo os boletins informativos e casos de COVID-19 no Brasil. 
+### `get_corona_br()`
+Use esta função para extrair os dados de boletins informativos e casos de COVID-19 no Brasil. Esses dados se encontram armazenados no portal: [O Brasil em dados libertos](https://brasil.io/). 
 
-```{r get-br, error=TRUE}
-dados <- get_corona_br(by_uf = TRUE)
+```{r get-br1, error=TRUE, message=FALSE}
+# baixar os dados, salvando-os no objeto "dados1"
+dados1 <- get_corona_br(by_uf = TRUE)
 ```
 
-#### Inspecionando os dados
 
-```{r data-br}
-head(dados)
+```{r data-br1}
+# inspecionar "dados1": quais variáveis estão presentes neste conjunto de dados?
+names(dados1)
 ```
 
-### Baixando os dados mundiais
 
-```{r get-jhu}
-dados_jhu <- get_corona_jhu()
+```{r data-br2}
+# inspecionar "dados1": qual é tamanho deste conjunto de dados? (Nr. de linhas e colunas)
+dim(dados1)
 ```
 
-#### Inspecionando os dados mundiais
 
-```{r}
-head(dados_jhu)
+```{r data-br3}
+# inspecionar "dados1": ver o cabeçalho e primeiras linhas do conjunto de dados.
+head(dados1)
 ```
+
+### `get_corona_minsaude()`
+Use esta função para extrair os dados do [Ministério da Saúde do Brasil](https://coronavirus.saude.gov.br/).
+
+```{r get-br2, error=TRUE, message=FALSE}
+# baixar os dados, salvando-os no objeto "dados2"
+dados2 <- get_corona_minsaude()
+```
+
+
+```{r data-br4}
+# inspecionar "dados2": quais variáveis?
+names(dados2)
+```
+
+
+```{r data-br5}
+# inspecionar "dados2": dimensões do conjunto de dados
+dim(dados2)
+```
+
+
+```{r data-br6}
+# inspecionar "dados2": cabeçalho e primeiras linhas
+head(dados2)
+```
+
+
+## Dados mundiais
+Os dados mundiais são provenientes do *Center for Systems Science and Engineering* da Universidade Johns Hopkins (EUA), que estão armazenados no repositório público online [COVID-19]( https://github.com/CSSEGISandData/COVID-19)
+
+
+```{r get-jhu, message=FALSE}
+# baixar os dados, salvando-os no objeto "dados_mundiais"
+dados_mundiais <- get_corona_jhu()
+```
+
+
+```{r data-jhu}
+# inspecionar "dados_mundiais": cabeçalho e primeiras linhas
+head(dados_mundiais)
+```
+
+## Nota
+
+Ao usar as funções exemplificadas acima, arquivos de texto contendo os dados (e informações de acesso; metadados) de COVID são também automaticamente salvos em uma pasta chamada "output", dentro do ambiente de trabalho.
